--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>BJJ Submissions Tracker</title>
+  <title>BJJ Submissions Counter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="manifest" href="manifest.webmanifest">
@@ -311,7 +311,7 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="title"><span class="dot"></span> BJJ Submissions Tracker</div>
+      <div class="title"><span class="dot"></span> BJJ Submissions Counter</div>
       <div class="actions">
         <button class="ghost" id="addBtn" title="Add a submission">+ Add</button>
         <button class="ghost" id="sortBtn" title="Toggle sorting" aria-pressed="false"><> Sort</button>
