--- a/desktop.html
+++ b/desktop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>BJJ Submissions Tracker — Overview</title>
+  <title>BJJ Submissions Counter — Overview</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root{
@@ -96,7 +96,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>BJJ Submissions Tracker</h1>
+    <h1>BJJ Submissions Counter</h1>
     <p class="lead">
       Track what actually works in sparring. Log each submission you land and the <strong>opponent’s belt level</strong>
       (white, blue, purple, brown, black). The app keeps totals and simple breakdowns so you can
@@ -107,7 +107,7 @@
       <div class="phone" aria-hidden="true">
         <div class="screen">
           <!-- Replace this with a real screenshot of your mobile app -->
-          <img src="screenshot.png" alt="BJJ Submissions Tracker app preview on a phone">
+          <img src="screenshot.png" alt="BJJ Submissions Counter app preview on a phone">
         </div>
       </div>
 
@@ -122,9 +122,9 @@
         </ul>
 
         <!-- Feedback CTA instead of “open app” -->
-        <a class="cta" href="mailto:submissions.tracker.app+feedback@example.com?subject=BJJ%20Submissions%20Tracker%20Feedback">
-          Send Feedback ✉️
-        </a>
+       <a class="cta" href="mailto:info@bjjcounter.com?subject=BJJ%20Submissions%20Counter%20Feedback">
+  Send Feedback ✉️
+</a>
       </div>
     </section>
 
