--- a/index.html
+++ b/index.html
@@ -1220,10 +1220,10 @@ infoBackdrop.addEventListener("click", () => {
 
     
   </script>
-  <script>
+<script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('./sw.js').catch(console.error);
+    navigator.serviceWorker.register('/sw.js', { scope: '/' }).catch(console.error);
   });
 }
 </script>
