--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="canonical" href="https://www.bjjcounter.com/">
 <meta name="theme-color" content="#0ea5e9">
-<link rel="apple-touch-icon" href="icons/icon-192.png">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <script>
   (function () {
     const canonicalHost = 'www.bjjcounter.com';
